Run with Java 17